<resources>
    <string name="app_name">Basic Auth</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="id">User ID</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="nationality">Nationality</string>
    <string name="card_number">Card Account Number</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="dob">DOB</string>
    <string name="sign_in">Sign In</string>
</resources>